--- a/demo/basic/index.html
+++ b/demo/basic/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>Basic demo | jQuery vulcanval</title>
     <meta name="description" content="jQuery Plugin for validating forms and custom user inputs">
-    <link rel="stylesheet" href="../../lib/flexboxgrid.min.css">
-    <link rel="stylesheet" href="../../dist/vulcanval.js">
+    <link rel="stylesheet" href="../../lib/flexboxgrid-6.3.0.min.css">
+    <link rel="stylesheet" href="../../dist/vulcanval.css">
     <link rel="stylesheet" href="./../assets/styles.css">
     <style>
     .row {
