--- a/demo/basic-htmlconfig/index.html
+++ b/demo/basic-htmlconfig/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>Basic | vulcanval</title>
-    <link rel="stylesheet" href="../../lib/flexboxgrid-6.3.0.min.css">
+    <title>Basic HTML config | vulcanval</title>
+    <link rel="stylesheet" href="../../lib/foundation-3.0.3.min.css">
     <link rel="stylesheet" href="../../dist/vulcanval.css">
     <link rel="stylesheet" href="./../assets/styles.css">
     <style>
@@ -20,33 +20,35 @@
   </head>
   <body>
 
-    <h2>Basic | vulcanval</h2>
-    <p>Framework agnostic example of a basic form validation process.</p>
+    <h2>Basic HTML config | vulcanval</h2>
+    <p>A validation form configured with attributes.</p>
     <p><a href="../index.html">Demos index</a></p>
 
-    <form method="post" action="#">
+    <form novalidate method="post" action="#">
 
       <div class="row">
-        <div class="col-xs-5">
+        <div class="column small-12">
           <label for="email">Your Email</label>
-          <input id="email" name="email" type="email" placeholder="Your Email" data-vv-display="#email-msgs">
+          <input id="email" name="email" type="email" placeholder="Your Email"
+                 required minlength="4" maxlength="32" data-vv-display="#email-msgs">
           <div id="email-msgs"></div>
         </div>
       </div>
 
       <div class="row">
-        <div class="col-xs-5">
+        <div class="column small-12">
           <label for="pass">Your Password</label>
-          <input id="pass" name="pass" type="password" placeholder="Your Password" data-vv-display="#pass-msgs">
+          <input id="pass" name="pass" type="password" placeholder="Your Password"
+                 required minlength="4" maxlength="32" data-vv-display="#pass-msgs">
           <div id="pass-msgs"></div>
         </div>
       </div>
 
       <div class="row">
-        <div class="col-xs-2">
+        <div class="column small-6">
           <input type="submit" value="Login">
         </div>
-        <div class="col-xs-2">
+        <div class="column small-6">
           <input type="reset" value="Reset">
         </div>
       </div>
@@ -57,26 +59,10 @@
     <script src="../../dist/vulcanval.js"></script>
     <script src="./../assets/scripts.js"></script>
     <script>
-      $('form').vulcanval({
-        disableHTML5Validation: true,
-        fields: [{
-          name: 'email',
-          required: true,
-          validators: {
-            isEmail: true,
-            isLength: { min: 4, max: 32 }
-          }
-        }, {
-          name: 'pass',
-          required: true,
-          validators: {
-            isAlphanumeric: 'en-GB',
-            isLength: { min: 4, max: 32 }
-          }
-        }]
-      });
 
-      // The display elements are where we show error messages.
+      $('form').vulcanval();
+
+      // NOTE: The alphanumeric validator from the "basic demo" is not set.
     </script>
   </body>
 </html>
