--- a/demo/index.html
+++ b/demo/index.html
@@ -4,11 +4,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>Basic demo | jQuery vulcanval</title>
-    <meta name="description" content="jQuery Plugin for validating forms and custom user inputs">
-    <link rel="stylesheet" href="../../lib/flexboxgrid.min.css">
-    <link rel="stylesheet" href="../../dist/vulcanval.css">
-    <link rel="stylesheet" href="./../assets/styles.css">
+    <title>Basic demo | vulcanval</title>
+    <link rel="stylesheet" href="../lib/foundation-3.0.3.min.css">
+    <link rel="stylesheet" href="../dist/vulcanval.css">
+    <link rel="stylesheet" href="./assets/styles.css">
     <style>
     .row {
       margin-bottom: 20px;
@@ -16,12 +15,10 @@
     </style>
   </head>
   <body>
-    <h1>Demos | jQuery vulcanval</h1>
+    <h1>Demos | vulcanval</h1>
     <ul>
       <li><a href="./basic/index.html">Basic</a></li>
-      <li><a href="./customs/index.html">Basic</a></li>
-      <li><a href="./async/index.html">Async</a></li>
-      <li><a href="./complete/index.html">Complete</a></li>
+      <li><a href="./basic-htmlconfig/index.html">Basic with HTML attributes configuration</a></li>
     </ul>
   </body>
 </html>
