--- a/demo/normal/index.html
+++ b/demo/normal/index.html
@@ -14,6 +14,7 @@
     <div class="row">
       <div class="column small-12">
         <h2>Normal demo | vulcanval</h2>
+        <p>A complete example with many of the flavours of the library.</p>
         <p><a href="../index.html">Demos index</a></p>
       </div>
     </div>
@@ -109,23 +110,23 @@
       <!-- BIRTHDAY -->
       <div class="row">
         <div class="column small-12">
-          <label for="bd-mm">Birthday</label>
+          <label for="birthdate-mm">Birthday</label>
         </div>
       </div>
       <div class="row">
         <div class="column small-4">
-          <input id="bd-mm" name="bd-mm" type="number" placeholder="MM" data-vv-display="#bd-display">
+          <input id="birthdate-mm" name="birthdate.mm" type="number" placeholder="MM" data-vv-display="#birthdate-display">
         </div>
         <div class="column small-4">
-          <input name="bd-dd" type="number" placeholder="DD" data-vv-display="#bd-display">
+          <input name="birthdate.dd" type="number" placeholder="DD" data-vv-display="#birthdate-display">
         </div>
         <div class="column small-4">
-          <input name="bd-yyyy" type="number" placeholder="YYYY" data-vv-display="#bd-display">
+          <input name="birthdate.yyyy" type="number" placeholder="YYYY" data-vv-display="#birthdate-display">
         </div>
       </div>
       <div class="row">
         <div class="column small-12">
-          <div id="bd-display"></div>
+          <div id="birthdate-display"></div>
         </div>
       </div>
 
