--- a/demo/index.html
+++ b/demo/index.html
@@ -4,21 +4,18 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>Basic demo | vulcanval</title>
+    <title>Demos | vulcanval</title>
     <link rel="stylesheet" href="../lib/foundation-3.0.3.min.css">
-    <link rel="stylesheet" href="../dist/vulcanval.css">
     <link rel="stylesheet" href="./assets/styles.css">
-    <style>
-    .row {
-      margin-bottom: 20px;
-    }
-    </style>
   </head>
   <body>
     <h1>Demos | vulcanval</h1>
     <ul>
       <li><a href="./basic/index.html">Basic</a></li>
       <li><a href="./basic-htmlconfig/index.html">Basic with HTML attributes configuration</a></li>
+      <li><a href="./normal/index.html">Normal form</a></li>
+      <li><a href="./lang/index.html">Installing language</a></li>
+      <li><a href="./lang-new/index.html">Creating language</a></li>
     </ul>
   </body>
 </html>
