--- a/demo/index.html
+++ b/demo/index.html
@@ -16,6 +16,7 @@
       <li><a href="./normal/index.html">Normal form</a></li>
       <li><a href="./lang/index.html">Installing language</a></li>
       <li><a href="./lang-new/index.html">Creating language</a></li>
+      <li><a href="./intern/index.html">Only functionality (intern)</a></li>
     </ul>
   </body>
 </html>
