demo: custom fields

--- a/demo/index.html
+++ b/demo/index.html
@@ -17,6 +17,7 @@
       <li><a href="./lang/index.html">Installing language</a></li>
       <li><a href="./lang-new/index.html">Creating language</a></li>
       <li><a href="./intern/index.html">Only functionality (intern)</a></li>
+      <li><a href="./custom-fields/index.html">Custom fields</a></li>
     </ul>
   </body>
 </html>
