demo: updates, condition

--- a/demo/index.html
+++ b/demo/index.html
@@ -18,6 +18,7 @@
       <li><a href="./lang-new/index.html">Creating language</a></li>
       <li><a href="./intern/index.html">Only functionality (intern)</a></li>
       <li><a href="./custom-fields/index.html">Custom fields</a></li>
+      <li><a href="./conditions/index.html">Conditions</a></li>
     </ul>
   </body>
 </html>
