--- a/demo/conditions/index.html
+++ b/demo/conditions/index.html
@@ -4,25 +4,23 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>Intern | vulcanval</title>
+    <title>Conditions | vulcanval</title>
     <link rel="stylesheet" href="../../lib/foundation-3.0.3.min.css">
     <link rel="stylesheet" href="../../dist/vulcanval.css">
     <link rel="stylesheet" href="./../assets/styles.css">
-    <link rel="stylesheet" href="./index.css">
   </head>
   <body>
 
-    <h2>Intern | vulcanval</h2>
-    <p>Use the library only for its functionality so we can handle the UI ourselves.</p>
+    <h2>Conditions | vulcanval</h2>
+    <p>Validation of fields with conditions.</p>
     <p><a href="../index.html">Demos index</a></p>
 
-    <form novalidate>
+    <form>
 
       <div class="row">
         <div class="column small-12">
-          <label for="email">Your Email</label>
-          <input id="email" name="email" type="email" placeholder="Your Email"
-                 required maxlength="12" data-vv-display="#email-msgs">
+          <label for="email">Your Email (try: <b>admin@gmail.com</b> to see condition working)</label>
+          <input id="email" name="email" type="email" placeholder="Your Email" data-vv-display="#email-msgs">
           <div id="email-msgs"></div>
         </div>
       </div>
@@ -30,8 +28,7 @@
       <div class="row">
         <div class="column small-12">
           <label for="pass">Your Password</label>
-          <input id="pass" name="pass" type="password" placeholder="Your Password"
-                 required pattern="[a-zA-Z0-9]*" minlength="10" maxlength="12" data-vv-display="#pass-msgs">
+          <input id="pass" name="pass" type="password" placeholder="Your Password" data-vv-display="#pass-msgs">
           <div id="pass-msgs"></div>
         </div>
       </div>
