--- a/demo/index.html
+++ b/demo/index.html
@@ -19,6 +19,8 @@
       <li><a href="./intern/index.html">Only functionality (intern)</a></li>
       <li><a href="./custom-fields/index.html">Custom fields</a></li>
       <li><a href="./conditions/index.html">Conditions</a></li>
+      <li><a href="https://github.com/vulcan-estudios/vulcanval/tree/master/demo/server">Server</a></li>
+      <li><a href="https://github.com/vulcan-estudios/vulcanval/tree/master/demo/complete">Complete demo</a></li>
     </ul>
   </body>
 </html>
