--- a/test/client/events/forms.html
+++ b/test/client/events/forms.html
@@ -41,3 +41,20 @@
   <input type="submit">
   <input type="reset">
 </form>
+
+<form id="events5">
+  <input name="email" type="email" value="wrong value">
+  <textarea name="bio">wrong value</textarea>
+  <select name="job">
+    <option value="wrong" selected>Wrong value</option>
+  </select>
+</form>
+
+<form id="events6">
+  <input name="email" type="email" value="">
+  <textarea name="bio"></textarea>
+  <select name="job">
+    <option value="">Default</option>
+    <option value="wrong">Wrong value</option>
+  </select>
+</form>
