--- a/demo/index.html
+++ b/demo/index.html
@@ -2,25 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>Demos | vulcanval</title>
-    <link rel="stylesheet" href="../lib/foundation-3.0.3.min.css">
-    <link rel="stylesheet" href="./assets/styles.css">
   </head>
   <body>
-    <h1>Demos | vulcanval</h1>
-    <ul>
-      <li><a href="./basic/index.html">Basic</a></li>
-      <li><a href="./basic-htmlconfig/index.html">Basic with HTML attributes configuration</a></li>
-      <li><a href="./normal/index.html">Normal form</a></li>
-      <li><a href="./lang/index.html">Installing language</a></li>
-      <li><a href="./lang-new/index.html">Creating language</a></li>
-      <li><a href="./intern/index.html">Only functionality (intern)</a></li>
-      <li><a href="./custom-fields/index.html">Custom fields</a></li>
-      <li><a href="./conditions/index.html">Conditions</a></li>
-      <li><a href="https://github.com/vulcan-estudios/vulcanval/tree/master/demo/server">Server</a></li>
-      <li><a href="https://github.com/vulcan-estudios/vulcanval/tree/master/demo/complete">Complete demo</a></li>
-    </ul>
+    <script>window.location.href='../#demos';</script>
   </body>
 </html>
