--- a/demo/lang/index.html
+++ b/demo/lang/index.html
@@ -4,54 +4,63 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>Install language | vulcanval</title>
-    <link rel="stylesheet" href="../../lib/foundation-3.0.3.min.css">
-    <link rel="stylesheet" href="../../dist/vulcanval.css">
-    <link rel="stylesheet" href="./../assets/styles.css">
+    <title>VulcanVal | Validate data forms in client and server sides seamlessly</title>
+    <meta name="description" content="A package to validate data objects (possibly extracted from HTML forms) in client and server sides and a customizable jQuery plugin to validate them in realtime">
+    <script src="../../site/js/webcomponents-lite.min.js"></script>
+    <link rel="shortcut icon" href="/site/favicon.png">
+    <link rel="import" href="../../site/polymers/vv-all.html">
+
+    <!-- VulcanVal jQuery plugin styles -->
+    <link rel="stylesheet" href="../../dist/vulcanval-jquery.css">
   </head>
   <body>
+    <vv-header></vv-header>
+    <vv-main>
 
-    <h2>Install language | vulcanval</h2>
-    <p>Installing a pre-built language (Spanish).</p>
-    <p><a href="../index.html">Demos index</a></p>
+      <h3>Install a language</h3>
+      <p>Installing a pre-built language (Spanish) with importing the language file. (If you install many languages, the last one will be used as default.)</p>
+      <p><a href="../index.html">Back to demos</a></p>
 
-    <form novalidate>
+      <form novalidate>
 
-      <div class="row">
-        <div class="column small-12">
-          <label for="email">Tu email</label>
-          <input id="email" name="email" type="email" placeholder="Tu email"
-                 required maxlength="12" data-vv-display="#email-msgs">
-          <div id="email-msgs"></div>
+        <h4>Login</h4>
+
+        <div class="row">
+          <div class="column small-12">
+            <label for="email">Tu email</label>
+            <input id="email" name="email" type="email" placeholder="Tu email"
+                   required maxlength="12" data-vv-display="#email-msgs">
+            <div id="email-msgs"></div>
+          </div>
         </div>
-      </div>
 
-      <div class="row">
-        <div class="column small-12">
-          <label for="pass">Tu contraseña</label>
-          <input id="pass" name="pass" type="password" placeholder="Tu contraseña"
-                 required pattern="[a-zA-Z0-9]*" minlength="10" maxlength="12" data-vv-display="#pass-msgs">
-          <div id="pass-msgs"></div>
+        <div class="row">
+          <div class="column small-12">
+            <label for="pass">Tu contraseña</label>
+            <input id="pass" name="pass" type="password" placeholder="Tu contraseña"
+                   required pattern="[a-zA-Z0-9]*" minlength="10" maxlength="12" data-vv-display="#pass-msgs">
+            <div id="pass-msgs"></div>
+          </div>
         </div>
-      </div>
 
-      <div class="row">
-        <div class="column small-6">
-          <input class="button" type="submit" value="Entrar">
+        <div class="row">
+          <div class="column small-12">
+            <input class="button" type="submit" value="Entrar">
+            <input class="button secondary" type="reset" value="Resetear">
+          </div>
         </div>
-        <div class="column small-6">
-          <input class="button secondary" type="reset" value="Resetear">
-        </div>
-      </div>
 
-    </form>
+      </form>
+
+    </vv-main>
+    <vv-footer></vv-footer>
 
     <script src="../../lib/jquery-3.0.0.min.js"></script>
     <script src="../../dist/vulcanval.js"></script>
+    <script src="../../dist/vulcanval-jquery.js"></script>
+    <!-- Note the use of this import, only with this, the language is installed
+         and set as default -->
     <script src="../../dist/es.js"></script>
-    <script src="./../assets/scripts.js"></script>
-    <script>
-      $('form').vulcanval();
-    </script>
+    <script src="./scripts.js"></script>
   </body>
 </html>
