--- a/demo/normal/index.html
+++ b/demo/normal/index.html
@@ -4,154 +4,194 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>Normal demo | vulcanval</title>
-    <link rel="stylesheet" href="../../lib/foundation-3.0.3.min.css">
-    <link rel="stylesheet" href="../../dist/vulcanval.css">
-    <link rel="stylesheet" href="./../assets/styles.css">
+    <title>VulcanVal | Validate data forms in client and server sides seamlessly</title>
+    <meta name="description" content="A package to validate data objects (possibly extracted from HTML forms) in client and server sides and a customizable jQuery plugin to validate them in realtime">
+    <script src="../../site/js/webcomponents-lite.min.js"></script>
+    <link rel="shortcut icon" href="/site/favicon.png">
+    <link rel="import" href="../../site/polymers/vv-all.html">
+
+    <!-- VulcanVal jQuery plugin styles -->
+    <link rel="stylesheet" href="../../dist/vulcanval-jquery.css">
   </head>
   <body>
+    <vv-header></vv-header>
+    <vv-main>
 
-    <div class="row">
-      <div class="column small-12">
-        <h2>Normal demo | vulcanval</h2>
-        <p>A complete example with many of the flavours of the library.</p>
-        <p><a href="../index.html">Demos index</a></p>
-      </div>
-    </div>
+      <h3>Normal demo</h3>
+      <p>A complete example with many flavours of the library.</p>
+      <p><a href="../index.html">Back to demos</a></p>
 
-    <form novalidate>
+      <form novalidate>
 
-      <!-- NAME & EMAIL -->
-      <div class="row">
-        <div class="column small-6">
-          <label for="name">Name</label>
-          <input id="name" name="name" type="text" placeholder="First and last name" data-vv-display="#name-display">
-          <div id="name-display"></div>
+        <!-- NAME & EMAIL -->
+        <div class="row">
+          <div class="column small-12 medium-6">
+            <label for="name">Name</label>
+            <input id="name" name="name" type="text" placeholder="First and last name" data-vv-display="#name-display">
+            <div id="name-display"></div>
+          </div>
+          <div class="column small-12 medium-6">
+            <label for="email">Email</label>
+            <input id="email" name="email" type="email" placeholder="Email" data-vv-display="#email-display">
+            <div id="email-display"></div>
+          </div>
         </div>
-        <div class="column small-6">
-          <label for="email">Email</label>
-          <input id="email" name="email" type="email" placeholder="Email" data-vv-display="#email-display">
-          <div id="email-display"></div>
-        </div>
-      </div>
 
-      <!-- WEBSITE & AGE -->
-      <div class="row">
-        <div class="column small-6">
-          <label for="website">Website</label>
-          <input id="website" name="website" type="url" placeholder="Website" data-vv-display="#website-display">
-          <div id="website-display"></div>
+        <!-- WEBSITE & AGE -->
+        <div class="row">
+          <div class="column small-12 medium-6">
+            <label for="website">Website</label>
+            <input id="website" name="website" type="url" placeholder="Website" data-vv-display="#website-display">
+            <div id="website-display"></div>
+          </div>
+          <div class="column small-12 medium-6">
+            <label for="age">Age</label>
+            <input id="age" name="age" type="number" placeholder="Age" data-vv-display="#age-display">
+            <div id="age-display"></div>
+          </div>
         </div>
-        <div class="column small-6">
-          <label for="age">Age</label>
-          <input id="age" name="age" type="number" placeholder="Age" data-vv-display="#age-display">
-          <div id="age-display"></div>
-        </div>
-      </div>
 
-      <!-- PASSWORD & REPEAT PASSWORD -->
-      <div class="row">
-        <div class="column small-6">
-          <label for="pass">Password</label>
-          <input id="pass" name="pass" type="password" placeholder="Password" data-vv-display="#pass-display">
-          <div id="pass-display"></div>
+        <!-- PASSWORD & REPEAT PASSWORD -->
+        <div class="row">
+          <div class="column small-12 medium-6">
+            <label for="pass">Password</label>
+            <input id="pass" name="pass" type="password" placeholder="Password" data-vv-display="#pass-display">
+            <div id="pass-display"></div>
+          </div>
+          <div class="column small-12 medium-6">
+            <label for="pass2">Repeat password</label>
+            <input id="pass2" name="pass2" type="password" placeholder="Repeat password" data-vv-display="#pass2-display">
+            <div id="pass2-display"></div>
+          </div>
         </div>
-        <div class="column small-6">
-          <label for="pass2">Repeat password</label>
-          <input id="pass2" name="pass2" type="password" placeholder="Repeat password" data-vv-display="#pass2-display">
-          <div id="pass2-display"></div>
-        </div>
-      </div>
 
-      <!-- JOB -->
-      <div class="row">
-        <div class="column small-12">
-          <label for="job">Job</label>
-          <select id="job" name="job" data-vv-display="#job-display">
-            <option value="">-- Job --</option>
-            <option value="engineer">Engineer</option>
-            <option value="designer">Designer</option>
-          </select>
-          <div id="job-display"></div>
+        <!-- JOB -->
+        <div class="row">
+          <div class="column small-12">
+            <label for="job">Job</label>
+            <select id="job" name="job" data-vv-display="#job-display">
+              <option value="">-- Job --</option>
+              <option value="engineer">Engineer</option>
+              <option value="designer">Designer</option>
+            </select>
+            <div id="job-display"></div>
+          </div>
         </div>
-      </div>
 
-      <!-- COOKING LEVEL -->
-      <div class="row">
-        <div class="column small-12">
-          <label>Cooking level</label>
+        <!-- COOKING LEVEL -->
+        <div class="row">
+          <div class="column small-12">
+            <label>Cooking level</label>
+          </div>
         </div>
-      </div>
-      <div class="row">
-        <div class="column small-12">
+        <div class="row">
+          <div class="column small-12">
 
-          <input id="cooking1" name="cooking" type="radio" value="basic" data-vv-display="#cooking-display">
-          <label for="cooking1">Basic</label>
+            <input id="cooking1" name="cooking" type="radio" value="basic" data-vv-display="#cooking-display">
+            <label for="cooking1">Basic</label>
 
-          <input id="cooking2" name="cooking" type="radio" value="intermediate" data-vv-display="#cooking-display">
-          <label for="cooking2">Intermediate</label>
+            <input id="cooking2" name="cooking" type="radio" value="intermediate" data-vv-display="#cooking-display">
+            <label for="cooking2">Intermediate</label>
 
-          <input id="cooking3" name="cooking" type="radio" value="advanced" data-vv-display="#cooking-display">
-          <label for="cooking3">Advanced</label>
+            <input id="cooking3" name="cooking" type="radio" value="advanced" data-vv-display="#cooking-display">
+            <label for="cooking3">Advanced</label>
 
-          <div id="cooking-display"></div>
+            <div id="cooking-display"></div>
+          </div>
         </div>
-      </div>
 
-      <!-- BIO -->
-      <div class="row">
-        <div class="column small-12">
-          <label for="bio">Bio</label>
-          <textarea id="bio" name="bio" rows="5" placeholder="Bio" data-vv-display="#bio-display"></textarea>
-          <div id="bio-display"></div>
+        <!-- BIO -->
+        <div class="row">
+          <div class="column small-12">
+            <label for="bio">Bio</label>
+            <textarea id="bio" name="bio" rows="5" placeholder="Bio" data-vv-display="#bio-display"></textarea>
+            <div id="bio-display"></div>
+          </div>
         </div>
-      </div>
 
-      <!-- BIRTHDAY -->
-      <div class="row">
-        <div class="column small-12">
-          <label for="birthdate-mm">Birthday</label>
+        <!-- BIRTHDAY -->
+        <div class="row">
+          <div class="column small-12">
+            <label for="birthdate-mm">Birthday</label>
+          </div>
         </div>
-      </div>
-      <div class="row">
-        <div class="column small-4">
-          <input id="birthdate-mm" name="birthdate.mm" type="number" placeholder="MM" data-vv-display="#birthdate-display">
+        <div class="row">
+          <div class="column small-4">
+            <input id="birthdate-mm" name="birthdate.mm" type="number" placeholder="MM" data-vv-display="#birthdate-display">
+          </div>
+          <div class="column small-4">
+            <input name="birthdate.dd" type="number" placeholder="DD" data-vv-display="#birthdate-display">
+          </div>
+          <div class="column small-4">
+            <input name="birthdate.yyyy" type="number" placeholder="YYYY" data-vv-display="#birthdate-display">
+          </div>
         </div>
-        <div class="column small-4">
-          <input name="birthdate.dd" type="number" placeholder="DD" data-vv-display="#birthdate-display">
+        <div class="row">
+          <div class="column small-12">
+            <div id="birthdate-display"></div>
+          </div>
         </div>
-        <div class="column small-4">
-          <input name="birthdate.yyyy" type="number" placeholder="YYYY" data-vv-display="#birthdate-display">
-        </div>
-      </div>
-      <div class="row">
-        <div class="column small-12">
-          <div id="birthdate-display"></div>
-        </div>
-      </div>
 
-      <!-- TERMS -->
-      <div class="row">
-        <div class="column small-12">
-          <input id="terms" name="terms" type="checkbox" data-vv-display="#terms-display">
-          <label for="terms">Do you agree the terms of service and privacy policy?</label>
-          <div id="terms-display"></div>
+        <!-- TERMS -->
+        <div class="row">
+          <div class="column small-12">
+            <label for="terms">
+              <input id="terms" name="terms" type="checkbox" data-vv-display="#terms-display">
+              Do you agree the terms of service and privacy policy?
+            </label>
+            <div id="terms-display"></div>
+          </div>
         </div>
-      </div>
 
-      <div class="row">
-        <div class="column small-12">
-          <input class="button" type="submit" value="Register">
-          <input class="button secondary" type="reset" value="Reset">
+        <div class="row">
+          <div class="column small-12">
+            <input class="button" type="submit" value="Register">
+            <input class="button secondary" type="reset" value="Reset">
+          </div>
         </div>
-      </div>
 
-    </form>
+        <div class="row">
+          <div class="column small-12 medium-6">
+            <h4>Validate</h4>
+            <p>This is visually, it is the same as on submit.</p>
+            <input id="forceValidation" class="button warning" type="button" value="Validate">
+          </div>
+          <div class="column small-12 medium-6">
+            <h4>Reset</h4>
+            <p>This is the same as on reset.</p>
+            <input id="forceReset" class="button warning" type="button" value="Force Reset">
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="column small-12 medium-6">
+            <h4>Inspection</h4>
+            <p>Get the validation status without validating form visually. See console.</p>
+            <input id="inspect" class="button warning" type="button" value="Inspect">
+            <div>
+              <b><code id="inspection">Click on the Inspect button</code></b>
+            </div>
+          </div>
+          <div class="column small-12 medium-6">
+            <h4>Map</h4>
+            <p>When a form is valid, get the data map of all form fields. See console.</p>
+            <input id="getMap" class="button warning" type="button" value="Get Map">
+            <div>
+              <b><code id="map">Click on the Get Map button</code></b>
+            </div>
+          </div>
+        </div>
+
+      </form>
+
+    </vv-main>
+    <vv-footer></vv-footer>
 
     <script src="../../lib/jquery-3.0.0.min.js"></script>
+    <!-- Note the use of this library to detect browser autofills -->
     <script src="../../lib/autofill-event-1.0.0.min.js"></script>
     <script src="../../dist/vulcanval.js"></script>
-    <script src="./../assets/scripts.js"></script>
-    <script src="./script.js"></script>
+    <script src="../../dist/vulcanval-jquery.js"></script>
+    <script src="./scripts.js"></script>
   </body>
 </html>
