chore: update site

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>VulcanVal | Validate data forms in client and server sides seamlessly</title>
     <meta name="description" content="A package to validate data objects (possibly extracted from HTML forms) in client and server sides and a customizable jQuery plugin to validate them in realtime">
-    <script src="../site/js/webcomponents-lite.min.js"></script>
-    <link rel="shortcut icon" href="/site/favicon.png">
-    <link rel="import" href="../site/polymers/vv-all.html">
+    <script src="./site/js/webcomponents-lite.min.js"></script>
+    <link rel="shortcut icon" href="/vulcanval/site/favicon.png">
+    <link rel="import" href="./site/polymers/vv-all.html">
   </head>
   <body>
 
