chore: fix site polymer header

--- a/site/polymers/vv-header.html
+++ b/site/polymers/vv-header.html
@@ -25,7 +25,7 @@
     <header>
       <vv-wrap>
         <div class="column small-12 medium-9">
-          <a href="/"><h1>VulcanVal</h1></a>
+          <a href="/vulcanval"><h1>VulcanVal</h1></a>
           <h2>Validate data forms in client and server sides seamlessly</h2>
         </div>
         <div class="column small-12 medium-3">
