demo: add source code button

--- a/site/polymers/vv-all.html
+++ b/site/polymers/vv-all.html
@@ -9,6 +9,7 @@
 <link rel="import" href="./vv-header.html">
 <link rel="import" href="./vv-main.html">
 <link rel="import" href="./vv-footer.html">
+<link rel="import" href="./vv-source.html">
 
 <script src="../js/scripts.js"></script>
 <script src="../js/prism.js"></script>
