chore: site footer

--- a/site/polymers/vv-footer.html
+++ b/site/polymers/vv-footer.html
@@ -19,7 +19,7 @@
     <footer>
       <vv-wrap>
         <div class="column small-12">
-          <p>&copy; 2016 <a href="http://romelperez.com" target="_blank">Romel Pérez</a> and <a href="http://vulcanst.co">Vulcan Estudios Ltda.</a></p>
+          <p>&copy; 2016 <a href="http://romelperez.com" target="_blank">Romel Pérez</a></p>
         </div>
       </vv-wrap>
     </footer>
