docs: readme and site

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         <li>Ability to add custom validators.</li>
         <li>Ability to add custom fields different from form elements.</li>
         <li>Ability to configure fieldsets.</li>
+        <li>Configuration checkers to prevent errors in settings.</li>
         <li>Extract data from forms elements as data maps (possibly nested objects).</li>
         <li>Internationalization support.</li>
         <li>HTML5 integration.</li>
