chore: site seo info

--- a/index.html
+++ b/index.html
@@ -4,8 +4,26 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+
     <title>VulcanVal | Validate data forms in client and server sides seamlessly</title>
     <meta name="description" content="A package to validate data objects (possibly extracted from HTML forms) in client and server sides and a customizable jQuery plugin to validate them in realtime">
+    <meta name="keywords" content="vulcanval, data validation, form validation, npm package, jquery plugin">
+    <meta name="robots" content="index, follow">
+
+    <meta property="og:title" content="VulcanVal">
+    <meta property="og:site_name" content="VulcanVal">
+    <meta property="og:description" content="Validate data forms in client and server sides seamlessly">
+    <meta property="og:type" content="profile">
+    <meta property="og:url" content="http://vulcan-estudios.github.io/vulcanval">
+    <meta property="og:image" content="http://vulcan-estudios.github.io/vulcanval/site/seo.jpg">
+
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="VulcanVal">
+    <meta name="twitter:description" content="Validate data forms in client and server sides seamlessly">
+    <meta name="twitter:site" content="@romelperez07">
+    <meta name="twitter:creator" content="@romelperez07">
+    <meta name="twitter:image" content="http://vulcan-estudios.github.io/vulcanval/site/seo.jpg">
+
     <script src="./site/js/webcomponents-lite.min.js"></script>
     <link rel="shortcut icon" href="/site/favicon.png">
     <link rel="import" href="./site/polymers/vv-all.html">
