docs: fix index info

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@ import vulcanvalJQuery from 'vulcanval/bundle/js/jquery';</code></pre>
       <ul>
         <li>You can add certain support to browser input autofill with this package <a href="https://github.com/tbosch/autofill-event" target="_blank">github.com/tbosch/autofill-event</a>.</li>
         <li>VulcanVal does not support inputs type file, an alternative is <a href="https://github.com/vulcan-estudios/vulcanup" target="_blank">VulcanUp</a>.</li>
-        <p>The plugin does not require jQuery from code, it uses the global namespace.</p>
+        <li>The plugin does not require jQuery from code, it uses the global namespace.</li>
       </ul>
 
       <a name="thanks"></a>
