docs: index info

--- a/index.html
+++ b/index.html
@@ -185,7 +185,12 @@ import vulcanval from 'vulcanval';
 // And if you want to use the jQuery plugin:
 const vulcanvalJQuery = require('vulcanval/bundle/js/jquery');
 // or
-import vulcanvalJQuery from 'vulcanval/bundle/js/jquery';</code></pre>
+import vulcanvalJQuery from 'vulcanval/bundle/js/jquery';
+
+// If you want to use the plugin with jQuery from module bundler (not global):
+const vulcanvalJQuery = require('vulcanval/bundle/js/jquery/intern');
+// or
+import vulcanvalJQuery from 'vulcanval/bundle/js/jquery/intern';</code></pre>
       <p>VulcanVal has a peer dependency on <a href="https://www.npmjs.com/package/validator" target="_blank">validator.js</a>
          and in client-side the plugin requires <a href="http://jquery.com" target="_blank">jQuery</a> so make sure
          you install them first.</p>
@@ -204,14 +209,13 @@ import vulcanvalJQuery from 'vulcanval/bundle/js/jquery';</code></pre>
         <li><a href="https://raw.githubusercontent.com/vulcan-estudios/vulcanval/master/dist/vulcanval-jquery.min.js" download>vulcanval-jquery.min.js</a></li>
         <li><a href="https://raw.githubusercontent.com/vulcan-estudios/vulcanval/master/dist/vulcanval-jquery.min.css" download>vulcanval-jquery.min.css</a></li>
       </ul>
-      <p>And install them directly on your site before using the package and the plugin.</p>
+      <p>And install them directly on your site before using the package and the plugin after importing jQuery (when using the plugin).</p>
 
       <a name="additionals"></a>
       <h3>Additionals</h3>
       <ul>
         <li>You can add certain support to browser input autofill with this package <a href="https://github.com/tbosch/autofill-event" target="_blank">github.com/tbosch/autofill-event</a>.</li>
         <li>VulcanVal does not support inputs type file, an alternative is <a href="https://github.com/vulcan-estudios/vulcanup" target="_blank">VulcanUp</a>.</li>
-        <li>The plugin does not require jQuery from code, it uses the global namespace.</li>
       </ul>
 
       <a name="thanks"></a>
