docs: project info and changelog

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
       <ul>
         <li>Define universal validation configuration to validate in client and server sides in a really similar way.</li>
         <li>Use of the <a href="https://github.com/chriso/validator.js" target="_blank">validator.js</a> package validators so we implement well tested string validators.</li>
+        <li>The plugin supports <a href="http://jquery.com" target="_blank">jQuery</a> v1, v2 and v3.</li>
         <li>Customizable interface.</li>
         <li>Highly configurable.</li>
         <li>Dynamic validation process.</li>
