--- a/demo/fieldsets/index.html
+++ b/demo/fieldsets/index.html
@@ -61,7 +61,9 @@
 
           <div class="row">
             <div class="column small-12 text-right">
-              <!-- BUTTON NEXT -->
+              <!-- RESET -->
+              <input class="button secondary register-reset" type="button" value="Reset" data-id="user">
+              <!-- NEXT -->
               <input class="button register-next" type="button" value="Next"
                      data-current="user" data-to="creditcard">
             </div>
@@ -108,11 +110,13 @@
 
           <div class="row">
             <div class="column small-6">
-              <!-- BUTTON BACK -->
+              <!-- BACK -->
               <input class="button warning register-back" type="button" value="Back"
                      data-current="creditcard" data-to="user">
             </div>
             <div class="column small-6 text-right">
+              <!-- RESET -->
+              <input class="button secondary register-reset" type="button" value="Reset" data-id="creditcard">
               <!-- SUBMIT -->
               <input class="button" type="submit" value="Register">
             </div>
