--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <ul>
         <li>Configure validators for simple to complex forms easily.</li>
         <li>Configure and validate by fields, fieldsets or form.</li>
-        <li>Use <a href="https://github.com/chriso/validator.js" target="_blank">validator.js</a> with well tested string validators.</li>
+        <li>Use <a href="https://github.com/chriso/validator.js" target="_blank">validator.js</a> v3.0+ with well tested string validators.</li>
         <li>Add custom validators.</li>
         <li>Internationalization support.</li>
         <li>Configuration checkers to prevent errors in settings.</li>
@@ -53,7 +53,7 @@
       <ul>
         <li>Validate as you type.</li>
         <li>Inspect for validity, validate visually and reset by field, fieldset or form.</li>
-        <li>Import and customize via <a href="http://sass-lang.com" target="_blank">SASS</a> or use the pre-compiled files.</li>
+        <li>Import and customize via <a href="http://sass-lang.com" target="_blank">SASS</a> or use the built files.</li>
         <li>Supports <a href="http://jquery.com" target="_blank">jQuery</a> v1.7+, v2.0+ and v3.0+.</li>
         <li>Add custom fields different from form elements.</li>
         <li>Extract data from forms elements as data maps (possibly nested objects).</li>
@@ -202,7 +202,7 @@ require('vulcanval/bundle/js/jquery/intern');</code></pre>
       <pre><code class="language-css">@import &#39;vulcanval-jquery&#39;;</code></pre>
 
       <h4>Built files</h4>
-      <p>You can download the browser built files version 3.x with <a href="https://www.npmjs.com/package/validator" target="_blank">validator.js</a> version 6.x from:</p>
+      <p>You can download the latest browser built files version 3.x with <a href="https://www.npmjs.com/package/validator" target="_blank">validator.js</a> version 6.x from:</p>
       <ul>
         <li><a href="https://raw.githubusercontent.com/vulcan-estudios/vulcanval/master/dist/vulcanval.min.js" download>vulcanval.min.js</a></li>
         <li><a href="https://raw.githubusercontent.com/vulcan-estudios/vulcanval/master/dist/vulcanval-jquery.min.js" download>vulcanval-jquery.min.js</a></li>
